Update config